# Cobralyth

./: .gitignore  Containerfile  EXTERNAL_LIBRARIES_LICENSES  EXTERNAL_LIBRARIES_LICENSES.md  LICENSE  MemoryManagement.md  README.md  RELEASE_NOTES.md  audit_no_gnu_abi.sh  build_compiler copy.sh  build_compiler.sh  install.sh  run_regression_tests.sh  testrun.txt  uninstall.sh  zig-c++.sh  zig-c.sh
Cobralyth-Compiler-Go/: go.mod  main.go
Grammar-and-antlr4-files/: ClythV1.g4  clyth.g4  generateAntlr4RuntimeCpp.sh  show.sh
clyth-runtime/: EXTERNAL_LIBRARIES_LICENSES.md  README.md  runtime_libraries.json
clyth-standard-lib/: clyth_common.hpp  clyth_fileio.cpp  clyth_fileio.hpp  clyth_threads.hpp
compiler-backend/: CMakeLists.txt  EXTERNAL_LIBRARIES_LICENSES.md
compiler-frontend/: Cobralyth.g4  CobralythLexer.interp  CobralythLexer.tokens  CobralythLexer.ts  EXTERNAL_LIBRARIES_LICENSES.md  Lexer.ts  Main.ts  create_typescript_antlr4_target.sh  release_info.json  rollingTest.clyth
compiler-src/: CMakeLists.txt  EXTERNAL_LIBRARIES_LICENSES.md  release_info.json  rollingTest.clyth
compiler-src/src/: CMakeLists.txt  build_script.sh  clythAST.cpp  clythAST.hpp  clythLLVMStub.cpp  clythLLVMStub.hpp  clythLoweringPlan.cpp  clythLoweringPlan.hpp  clythSemantic.cpp  clythSemantic.hpp  clyth_ast.cpp  clyth_ast.hpp  clyth_llvm_stub.cpp  clyth_llvm_stub.hpp  clyth_lowering_plan.cpp  clyth_lowering_plan.hpp  clyth_semantic.cpp  clyth_semantic.hpp  common.hpp  lexer.cpp  lexer.hpp  main.cpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  utilFunctions.cpp  utilFunctions.hpp  util_functions.cpp
compiler-src/src/clyth_antlr_files/: ClythV1BaseListener.cpp  ClythV1BaseListener.h  ClythV1Lexer.cpp  ClythV1Lexer.h  ClythV1Listener.cpp  ClythV1Listener.h  ClythV1Parser.cpp  ClythV1Parser.h
docs/: README.md
sample-clyth-programs/: 03_0_2_native_string.clyth  05_0_4_runtime_set_collection.clyth  06_0_4_runtime_map_collection.clyth  07_0_2_struct_methods_release.clyth  08_0_4_runtime_dma_include.clyth  09_0_4_generic_runtime_package_include.clyth  10_0_4_runtime_collection_constructors.clyth  11_0_4_generic_user_templates.clyth  12_0_5_explicit_this_methods.clyth  13_0_5_first_class_function_callback.clyth  14_0_5_file_io_runtime.clyth  15_0_5_hash_runtime.clyth  16_0_5_https_router_api_surface.clyth  17_0_5_lambda_callback_invocation.clyth  18_0_5_json_runtime.clyth  19_0_5_formatted_string_literals.clyth  19_0_5_formatted_string_literals.expected  20_0_5_detached_method_decl.clyth  21_0_5_owned_handle_cleanup_policy.clyth  21_0_5_owned_handle_cleanup_policy.expected  22_0_5_char_array_type_surface.clyth  23_0_5_integer_boundary_surface.clyth  24_0_5_null_and_owned_cleanup_surface.clyth  REGRESSION_SUITE.md  (+30 more)
(+168 files in other folders)
